<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:id="@+id/relative"
        android:layout_width="@dimen/_120dp"
        android:layout_height="@dimen/_80dp"
        android:layout_margin="@dimen/_16dp"
        app:cardCornerRadius="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_playlist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/view_"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_24dp"
            android:layout_gravity="bottom"
            android:background="#99000000"
            app:layout_constraintBottom_toBottomOf="@id/relative"
            app:layout_constraintEnd_toEndOf="@id/relative"
            app:layout_constraintStart_toStartOf="@id/relative" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="@dimen/_40dp"
            android:layout_marginTop="@dimen/_2dp"
            android:layout_marginBottom="@dimen/_6dp"
            android:text="@string/tv_playlist"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@id/view_"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/view_" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_10dp"
        android:text="@string/tv_self_care_before_child_care"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/relative"
        app:layout_constraintTop_toTopOf="@id/relative" />

    <TextView
        android:id="@+id/tv_videoSeries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        android:layout_marginTop="@dimen/_4dp"
        android:text="@string/tv_32_video_series"
        android:textSize="@dimen/_12sp"
        app:layout_constraintStart_toEndOf="@id/relative"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

</androidx.constraintlayout.widget.ConstraintLayout>

